parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt_list stmt
Rule 3     stmt_list -> stmt
Rule 4     stmt -> ID ASSIGN expr SEMICOLON
Rule 5     stmt -> IF LPAREN expr RPAREN stmt
Rule 6     stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 7     stmt -> TYPE ID ASSIGN expr SEMICOLON
Rule 8     stmt -> SWITCH LPAREN expr RPAREN LBRACE case_list default_clause RBRACE
Rule 9     case_list -> case_list case
Rule 10    case_list -> empty
Rule 11    case -> CASE NUMBER COLON stmt_list BREAK SEMICOLON
Rule 12    default_clause -> DEFAULT COLON stmt_list
Rule 13    default_clause -> empty
Rule 14    stmt -> BREAK SEMICOLON
Rule 15    empty -> <empty>
Rule 16    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 17    stmt -> DO stmt WHILE LPAREN expr RPAREN SEMICOLON
Rule 18    stmt -> LBRACE stmt_list RBRACE
Rule 19    stmt -> PRINT LPAREN expr RPAREN SEMICOLON
Rule 20    expr -> expr PLUS expr
Rule 21    expr -> expr MINUS expr
Rule 22    expr -> expr TIMES expr
Rule 23    expr -> expr DIVIDE expr
Rule 24    expr -> expr MOD expr
Rule 25    expr -> expr EQ expr
Rule 26    expr -> expr NEQ expr
Rule 27    expr -> expr LT expr
Rule 28    expr -> expr GT expr
Rule 29    expr -> expr LE expr
Rule 30    expr -> expr GE expr
Rule 31    expr -> expr AND expr
Rule 32    expr -> expr OR expr
Rule 33    expr -> LPAREN expr RPAREN
Rule 34    expr -> NUMBER
Rule 35    expr -> ID

Terminals, with rules where they appear

AND                  : 31
ASSIGN               : 4 7
BREAK                : 11 14
CASE                 : 11
COLON                : 11 12
DEFAULT              : 12
DIVIDE               : 23
DO                   : 17
ELSE                 : 6
EQ                   : 25
GE                   : 30
GT                   : 28
ID                   : 4 7 35
IF                   : 5 6
LBRACE               : 8 18
LE                   : 29
LPAREN               : 5 6 8 16 17 19 33
LT                   : 27
MINUS                : 21
MOD                  : 24
NEQ                  : 26
NUMBER               : 11 34
OR                   : 32
PLUS                 : 20
PRINT                : 19
RBRACE               : 8 18
RPAREN               : 5 6 8 16 17 19 33
SEMICOLON            : 4 7 11 14 17 19
SWITCH               : 8
TIMES                : 22
TYPE                 : 7
WHILE                : 16 17
error                : 

Nonterminals, with rules where they appear

case                 : 9
case_list            : 8 9
default_clause       : 8
empty                : 10 13
expr                 : 4 5 6 7 8 16 17 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33
program              : 0
stmt                 : 2 3 5 6 6 16 17
stmt_list            : 1 2 11 12 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt_list stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . ID ASSIGN expr SEMICOLON
    (5) stmt -> . IF LPAREN expr RPAREN stmt
    (6) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (7) stmt -> . TYPE ID ASSIGN expr SEMICOLON
    (8) stmt -> . SWITCH LPAREN expr RPAREN LBRACE case_list default_clause RBRACE
    (14) stmt -> . BREAK SEMICOLON
    (16) stmt -> . WHILE LPAREN expr RPAREN stmt
    (17) stmt -> . DO stmt WHILE LPAREN expr RPAREN SEMICOLON
    (18) stmt -> . LBRACE stmt_list RBRACE
    (19) stmt -> . PRINT LPAREN expr RPAREN SEMICOLON

    ID              shift and go to state 4
    IF              shift and go to state 5
    TYPE            shift and go to state 6
    SWITCH          shift and go to state 7
    BREAK           shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    LBRACE          shift and go to state 8
    PRINT           shift and go to state 12

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .
    (2) stmt_list -> stmt_list . stmt
    (4) stmt -> . ID ASSIGN expr SEMICOLON
    (5) stmt -> . IF LPAREN expr RPAREN stmt
    (6) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (7) stmt -> . TYPE ID ASSIGN expr SEMICOLON
    (8) stmt -> . SWITCH LPAREN expr RPAREN LBRACE case_list default_clause RBRACE
    (14) stmt -> . BREAK SEMICOLON
    (16) stmt -> . WHILE LPAREN expr RPAREN stmt
    (17) stmt -> . DO stmt WHILE LPAREN expr RPAREN SEMICOLON
    (18) stmt -> . LBRACE stmt_list RBRACE
    (19) stmt -> . PRINT LPAREN expr RPAREN SEMICOLON

    $end            reduce using rule 1 (program -> stmt_list .)
    ID              shift and go to state 4
    IF              shift and go to state 5
    TYPE            shift and go to state 6
    SWITCH          shift and go to state 7
    BREAK           shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    LBRACE          shift and go to state 8
    PRINT           shift and go to state 12

    stmt                           shift and go to state 13

state 3

    (3) stmt_list -> stmt .

    ID              reduce using rule 3 (stmt_list -> stmt .)
    IF              reduce using rule 3 (stmt_list -> stmt .)
    TYPE            reduce using rule 3 (stmt_list -> stmt .)
    SWITCH          reduce using rule 3 (stmt_list -> stmt .)
    BREAK           reduce using rule 3 (stmt_list -> stmt .)
    WHILE           reduce using rule 3 (stmt_list -> stmt .)
    DO              reduce using rule 3 (stmt_list -> stmt .)
    LBRACE          reduce using rule 3 (stmt_list -> stmt .)
    PRINT           reduce using rule 3 (stmt_list -> stmt .)
    $end            reduce using rule 3 (stmt_list -> stmt .)
    RBRACE          reduce using rule 3 (stmt_list -> stmt .)


state 4

    (4) stmt -> ID . ASSIGN expr SEMICOLON

    ASSIGN          shift and go to state 14


state 5

    (5) stmt -> IF . LPAREN expr RPAREN stmt
    (6) stmt -> IF . LPAREN expr RPAREN stmt ELSE stmt

    LPAREN          shift and go to state 15


state 6

    (7) stmt -> TYPE . ID ASSIGN expr SEMICOLON

    ID              shift and go to state 16


state 7

    (8) stmt -> SWITCH . LPAREN expr RPAREN LBRACE case_list default_clause RBRACE

    LPAREN          shift and go to state 17


state 8

    (18) stmt -> LBRACE . stmt_list RBRACE
    (2) stmt_list -> . stmt_list stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . ID ASSIGN expr SEMICOLON
    (5) stmt -> . IF LPAREN expr RPAREN stmt
    (6) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (7) stmt -> . TYPE ID ASSIGN expr SEMICOLON
    (8) stmt -> . SWITCH LPAREN expr RPAREN LBRACE case_list default_clause RBRACE
    (14) stmt -> . BREAK SEMICOLON
    (16) stmt -> . WHILE LPAREN expr RPAREN stmt
    (17) stmt -> . DO stmt WHILE LPAREN expr RPAREN SEMICOLON
    (18) stmt -> . LBRACE stmt_list RBRACE
    (19) stmt -> . PRINT LPAREN expr RPAREN SEMICOLON

    ID              shift and go to state 4
    IF              shift and go to state 5
    TYPE            shift and go to state 6
    SWITCH          shift and go to state 7
    BREAK           shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    LBRACE          shift and go to state 8
    PRINT           shift and go to state 12

    stmt_list                      shift and go to state 18
    stmt                           shift and go to state 3

state 9

    (14) stmt -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 19


state 10

    (16) stmt -> WHILE . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 20


state 11

    (17) stmt -> DO . stmt WHILE LPAREN expr RPAREN SEMICOLON
    (4) stmt -> . ID ASSIGN expr SEMICOLON
    (5) stmt -> . IF LPAREN expr RPAREN stmt
    (6) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (7) stmt -> . TYPE ID ASSIGN expr SEMICOLON
    (8) stmt -> . SWITCH LPAREN expr RPAREN LBRACE case_list default_clause RBRACE
    (14) stmt -> . BREAK SEMICOLON
    (16) stmt -> . WHILE LPAREN expr RPAREN stmt
    (17) stmt -> . DO stmt WHILE LPAREN expr RPAREN SEMICOLON
    (18) stmt -> . LBRACE stmt_list RBRACE
    (19) stmt -> . PRINT LPAREN expr RPAREN SEMICOLON

    ID              shift and go to state 4
    IF              shift and go to state 5
    TYPE            shift and go to state 6
    SWITCH          shift and go to state 7
    BREAK           shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    LBRACE          shift and go to state 8
    PRINT           shift and go to state 12

    stmt                           shift and go to state 21

state 12

    (19) stmt -> PRINT . LPAREN expr RPAREN SEMICOLON

    LPAREN          shift and go to state 22


state 13

    (2) stmt_list -> stmt_list stmt .

    ID              reduce using rule 2 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 2 (stmt_list -> stmt_list stmt .)
    TYPE            reduce using rule 2 (stmt_list -> stmt_list stmt .)
    SWITCH          reduce using rule 2 (stmt_list -> stmt_list stmt .)
    BREAK           reduce using rule 2 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 2 (stmt_list -> stmt_list stmt .)
    DO              reduce using rule 2 (stmt_list -> stmt_list stmt .)
    LBRACE          reduce using rule 2 (stmt_list -> stmt_list stmt .)
    PRINT           reduce using rule 2 (stmt_list -> stmt_list stmt .)
    $end            reduce using rule 2 (stmt_list -> stmt_list stmt .)
    RBRACE          reduce using rule 2 (stmt_list -> stmt_list stmt .)


state 14

    (4) stmt -> ID ASSIGN . expr SEMICOLON
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr TIMES expr
    (23) expr -> . expr DIVIDE expr
    (24) expr -> . expr MOD expr
    (25) expr -> . expr EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr LE expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr AND expr
    (32) expr -> . expr OR expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . NUMBER
    (35) expr -> . ID

    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 23

    expr                           shift and go to state 24

state 15

    (5) stmt -> IF LPAREN . expr RPAREN stmt
    (6) stmt -> IF LPAREN . expr RPAREN stmt ELSE stmt
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr TIMES expr
    (23) expr -> . expr DIVIDE expr
    (24) expr -> . expr MOD expr
    (25) expr -> . expr EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr LE expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr AND expr
    (32) expr -> . expr OR expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . NUMBER
    (35) expr -> . ID

    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 23

    expr                           shift and go to state 27

state 16

    (7) stmt -> TYPE ID . ASSIGN expr SEMICOLON

    ASSIGN          shift and go to state 28


state 17

    (8) stmt -> SWITCH LPAREN . expr RPAREN LBRACE case_list default_clause RBRACE
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr TIMES expr
    (23) expr -> . expr DIVIDE expr
    (24) expr -> . expr MOD expr
    (25) expr -> . expr EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr LE expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr AND expr
    (32) expr -> . expr OR expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . NUMBER
    (35) expr -> . ID

    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 23

    expr                           shift and go to state 29

state 18

    (18) stmt -> LBRACE stmt_list . RBRACE
    (2) stmt_list -> stmt_list . stmt
    (4) stmt -> . ID ASSIGN expr SEMICOLON
    (5) stmt -> . IF LPAREN expr RPAREN stmt
    (6) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (7) stmt -> . TYPE ID ASSIGN expr SEMICOLON
    (8) stmt -> . SWITCH LPAREN expr RPAREN LBRACE case_list default_clause RBRACE
    (14) stmt -> . BREAK SEMICOLON
    (16) stmt -> . WHILE LPAREN expr RPAREN stmt
    (17) stmt -> . DO stmt WHILE LPAREN expr RPAREN SEMICOLON
    (18) stmt -> . LBRACE stmt_list RBRACE
    (19) stmt -> . PRINT LPAREN expr RPAREN SEMICOLON

    RBRACE          shift and go to state 30
    ID              shift and go to state 4
    IF              shift and go to state 5
    TYPE            shift and go to state 6
    SWITCH          shift and go to state 7
    BREAK           shift and go to state 9
    WHILE           shift and go to state 10
    DO              shift and go to state 11
    LBRACE          shift and go to state 8
    PRINT           shift and go to state 12

    stmt                           shift and go to state 13

state 19

    (14) stmt -> BREAK SEMICOLON .

    ID              reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    IF              reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    TYPE            reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    SWITCH          reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    BREAK           reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    WHILE           reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    DO              reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    LBRACE          reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    PRINT           reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    $end            reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    RBRACE          reduce using rule 14 (stmt -> BREAK SEMICOLON .)
    ELSE            reduce using rule 14 (stmt -> BREAK SEMICOLON .)


state 20

    (16) stmt -> WHILE LPAREN . expr RPAREN stmt
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr TIMES expr
    (23) expr -> . expr DIVIDE expr
    (24) expr -> . expr MOD expr
    (25) expr -> . expr EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr LE expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr AND expr
    (32) expr -> . expr OR expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . NUMBER
    (35) expr -> . ID

    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 23

    expr                           shift and go to state 31

state 21

    (17) stmt -> DO stmt . WHILE LPAREN expr RPAREN SEMICOLON

    WHILE           shift and go to state 32


state 22

    (19) stmt -> PRINT LPAREN . expr RPAREN SEMICOLON
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr TIMES expr
    (23) expr -> . expr DIVIDE expr
    (24) expr -> . expr MOD expr
    (25) expr -> . expr EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr LE expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr AND expr
    (32) expr -> . expr OR expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . NUMBER
    (35) expr -> . ID

    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 23

    expr                           shift and go to state 33

state 23

    (35) expr -> ID .

    SEMICOLON       reduce using rule 35 (expr -> ID .)
    PLUS            reduce using rule 35 (expr -> ID .)
    MINUS           reduce using rule 35 (expr -> ID .)
    TIMES           reduce using rule 35 (expr -> ID .)
    DIVIDE          reduce using rule 35 (expr -> ID .)
    MOD             reduce using rule 35 (expr -> ID .)
    EQ              reduce using rule 35 (expr -> ID .)
    NEQ             reduce using rule 35 (expr -> ID .)
    LT              reduce using rule 35 (expr -> ID .)
    GT              reduce using rule 35 (expr -> ID .)
    LE              reduce using rule 35 (expr -> ID .)
    GE              reduce using rule 35 (expr -> ID .)
    AND             reduce using rule 35 (expr -> ID .)
    OR              reduce using rule 35 (expr -> ID .)
    RPAREN          reduce using rule 35 (expr -> ID .)


state 24

    (4) stmt -> ID ASSIGN expr . SEMICOLON
    (20) expr -> expr . PLUS expr
    (21) expr -> expr . MINUS expr
    (22) expr -> expr . TIMES expr
    (23) expr -> expr . DIVIDE expr
    (24) expr -> expr . MOD expr
    (25) expr -> expr . EQ expr
    (26) expr -> expr . NEQ expr
    (27) expr -> expr . LT expr
    (28) expr -> expr . GT expr
    (29) expr -> expr . LE expr
    (30) expr -> expr . GE expr
    (31) expr -> expr . AND expr
    (32) expr -> expr . OR expr

    SEMICOLON       shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MOD             shift and go to state 39
    EQ              shift and go to state 40
    NEQ             shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    LE              shift and go to state 44
    GE              shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47


state 25

    (33) expr -> LPAREN . expr RPAREN
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr TIMES expr
    (23) expr -> . expr DIVIDE expr
    (24) expr -> . expr MOD expr
    (25) expr -> . expr EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr LE expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr AND expr
    (32) expr -> . expr OR expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . NUMBER
    (35) expr -> . ID

    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 23

    expr                           shift and go to state 48

state 26

    (34) expr -> NUMBER .

    SEMICOLON       reduce using rule 34 (expr -> NUMBER .)
    PLUS            reduce using rule 34 (expr -> NUMBER .)
    MINUS           reduce using rule 34 (expr -> NUMBER .)
    TIMES           reduce using rule 34 (expr -> NUMBER .)
    DIVIDE          reduce using rule 34 (expr -> NUMBER .)
    MOD             reduce using rule 34 (expr -> NUMBER .)
    EQ              reduce using rule 34 (expr -> NUMBER .)
    NEQ             reduce using rule 34 (expr -> NUMBER .)
    LT              reduce using rule 34 (expr -> NUMBER .)
    GT              reduce using rule 34 (expr -> NUMBER .)
    LE              reduce using rule 34 (expr -> NUMBER .)
    GE              reduce using rule 34 (expr -> NUMBER .)
    AND             reduce using rule 34 (expr -> NUMBER .)
    OR              reduce using rule 34 (expr -> NUMBER .)
    RPAREN          reduce using rule 34 (expr -> NUMBER .)


state 27

    (5) stmt -> IF LPAREN expr . RPAREN stmt
    (6) stmt -> IF LPAREN expr . RPAREN stmt ELSE stmt
    (20) expr -> expr . PLUS expr
    (21) expr -> expr . MINUS expr
    (22) expr -> expr . TIMES expr
    (23) expr -> expr . DIVIDE expr
    (24) expr -> expr . MOD expr
    (25) expr -> expr . EQ expr
    (26) expr -> expr . NEQ expr
    (27) expr -> expr . LT expr
    (28) expr -> expr . GT expr
    (29) expr -> expr . LE expr
    (30) expr -> expr . GE expr
    (31) expr -> expr . AND expr
    (32) expr -> expr . OR expr

    RPAREN          shift and go to state 49
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MOD             shift and go to state 39
    EQ              shift and go to state 40
    NEQ             shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    LE              shift and go to state 44
    GE              shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47


state 28

    (7) stmt -> TYPE ID ASSIGN . expr SEMICOLON
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr TIMES expr
    (23) expr -> . expr DIVIDE expr
    (24) expr -> . expr MOD expr
    (25) expr -> . expr EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr LE expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr AND expr
    (32) expr -> . expr OR expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . NUMBER
    (35) expr -> . ID

    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 23

    expr                           shift and go to state 50

state 29

    (8) stmt -> SWITCH LPAREN expr . RPAREN LBRACE case_list default_clause RBRACE
    (20) expr -> expr . PLUS expr
    (21) expr -> expr . MINUS expr
    (22) expr -> expr . TIMES expr
    (23) expr -> expr . DIVIDE expr
    (24) expr -> expr . MOD expr
    (25) expr -> expr . EQ expr
    (26) expr -> expr . NEQ expr
    (27) expr -> expr . LT expr
    (28) expr -> expr . GT expr
    (29) expr -> expr . LE expr
    (30) expr -> expr . GE expr
    (31) expr -> expr . AND expr
    (32) expr -> expr . OR expr

    RPAREN          shift and go to state 51
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MOD             shift and go to state 39
    EQ              shift and go to state 40
    NEQ             shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    LE              shift and go to state 44
    GE              shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47


state 30

    (18) stmt -> LBRACE stmt_list RBRACE .

    ID              reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    IF              reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    TYPE            reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    SWITCH          reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    BREAK           reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    WHILE           reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    DO              reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    LBRACE          reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    PRINT           reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    $end            reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    RBRACE          reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)
    ELSE            reduce using rule 18 (stmt -> LBRACE stmt_list RBRACE .)


state 31

    (16) stmt -> WHILE LPAREN expr . RPAREN stmt
    (20) expr -> expr . PLUS expr
    (21) expr -> expr . MINUS expr
    (22) expr -> expr . TIMES expr
    (23) expr -> expr . DIVIDE expr
    (24) expr -> expr . MOD expr
    (25) expr -> expr . EQ expr
    (26) expr -> expr . NEQ expr
    (27) expr -> expr . LT expr
    (28) expr -> expr . GT expr
    (29) expr -> expr . LE expr
    (30) expr -> expr . GE expr
    (31) expr -> expr . AND expr
    (32) expr -> expr . OR expr

    RPAREN          shift and go to state 52
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MOD             shift and go to state 39
    EQ              shift and go to state 40
    NEQ             shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    LE              shift and go to state 44
    GE              shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47


state 32

    (17) stmt -> DO stmt WHILE . LPAREN expr RPAREN SEMICOLON

    LPAREN          shift and go to state 53


state 33

    (19) stmt -> PRINT LPAREN expr . RPAREN SEMICOLON
    (20) expr -> expr . PLUS expr
    (21) expr -> expr . MINUS expr
    (22) expr -> expr . TIMES expr
    (23) expr -> expr . DIVIDE expr
    (24) expr -> expr . MOD expr
    (25) expr -> expr . EQ expr
    (26) expr -> expr . NEQ expr
    (27) expr -> expr . LT expr
    (28) expr -> expr . GT expr
    (29) expr -> expr . LE expr
    (30) expr -> expr . GE expr
    (31) expr -> expr . AND expr
    (32) expr -> expr . OR expr

    RPAREN          shift and go to state 54
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MOD             shift and go to state 39
    EQ              shift and go to state 40
    NEQ             shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    LE              shift and go to state 44
    GE              shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47


state 34

    (4) stmt -> ID ASSIGN expr SEMICOLON .

    ID              reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    IF              reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    TYPE            reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    SWITCH          reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    BREAK           reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    WHILE           reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    DO              reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    LBRACE          reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    PRINT           reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    $end            reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    RBRACE          reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)
    ELSE            reduce using rule 4 (stmt -> ID ASSIGN expr SEMICOLON .)


state 35

    (20) expr -> expr PLUS . expr
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr TIMES expr
    (23) expr -> . expr DIVIDE expr
    (24) expr -> . expr MOD expr
    (25) expr -> . expr EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr LE expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr AND expr
    (32) expr -> . expr OR expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . NUMBER
    (35) expr -> . ID

    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 23

    expr                           shift and go to state 55

state 36

    (21) expr -> expr MINUS . expr
    (20) expr -> . expr PLUS expr
    (21) expr -> . expr MINUS expr
    (22) expr -> . expr TIMES expr
    (23) expr -> . expr DIVIDE expr
    (24) expr -> . expr MOD expr
    (25) expr -> . expr EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr LE expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr AND expr
